aws database updated